Archive2/2b/fe8f3c7373e2b1/output
main.cpp:2:5: error: 'x' does not name a type
     x is : 3
     ^
