Archive2/2b/fe8f3c7373e2b1/main.cpp

    x is : 3
    x is : 2
